<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hys.statusbarnotification.MainActivity" 
    android:orientation="vertical">

    <Button 
        android:id="@+id/btnBar"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/btnBar"/>
    <Button 
        android:id="@+id/btnCancel"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/btnCancel"/>
    <Button 
        android:id="@+id/btnUpdate"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/btnUpdate"/>
    <Button 
        android:id="@+id/btnCustom"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/btnCustom"/>
    <Button 
        android:id="@+id/builder"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/builder"/>

</LinearLayout>
